Revision history for Perl extension XML::Xalan.

Apr 7, 2002
- Updated to work with Xalan 1.3

Dec 13, 2001
- Added AutoCast option to install_function()
- Updated Transformer doc. 
- Applied a micro patch to compile with gcc 2.95

Dec 12, 2001
- ext function arguments now automatically converted to basic data type equivalent to the xslt type. 
- now may die() safely inside extension function.
- more robust DOM methods. exceptions caught.

Dec 11, 2001
- Fixed segfault in XML::Xalan::XObject's get_nodelist()
- Fixed XSv.hpp to compile with MSVC

Dec 7, 2001
- Added XML::Xalan::ExecutionContext::XPath, XML::Xalan::XObject,
  XML::Xalan::XObjectFactory
- Extension function now accepts ExecutionContext object as the first arg,
  returning XML::Xalan::XObject object, and accepting XML::Xalan::XObject as 
  the third argument and so forth. 

Dec 4, 2001
- Added get_document() for XML::Xalan::ParsedSource
- Drawed inheritance line from XML::Xalan::ParsedSource to XML::Xalan::DocumentBuilder

Dec 3, 2001
- Added all DOM classes!
- Added pod documentation XML::Xalan::DOM. Fairly minimal.

Dec 1, 2001
- Added XML::Xalan::DOM:Node base class 
- Added Context option for install_external_function()

Nov 30, 2001
- Succesfully ported to Win32!
- Updated README
- Added more info on DocumentBuilder in XML::Xalan::Transformer pod.

Nov 26,2001
- Fixed warning inside content handler

Nov 25, 2001
- Fixed documentation for XML::Xalan::DocumentBuilder
- Added test in sax2_content.t

Nov 16, 2001
- Added DTD handler and lexical handler support.

Nov 7, 2001
- Major restructuring. 
- Added SAX2 content handler support. 

Oct 25, 2001
- Memory leak in external function plumbed!!
- Fixed install_external_function() to save a copy of sub

Oct 23, 2001
- Added uninstall_external_function()
- XML::Xalan and XML::Xerces::ParserLiaison are removed.
- Fixed coredump upon external function failures
- Added external function support!
- Added tests

Oct 22, 2001
- Improved docs