@@ -1,4 +1,5 @@
 
+#   $Id: Makefile.PL,v 1.2 2002/04/20 06:37:51 edpratomo Exp $
 #
 #   Copyright (c) 2001-2002 Edwin Pratomo
 #
@@ -64,7 +65,8 @@ if ($os eq 'MSWin32') {
     $xerces_inc = prompt("Xerces C++ INC directory: ", $xerces_inc);
     
     $config{INC}        = "-I$xalan_inc -I$xerces_inc ";
-    $config{DEFINE}     = '-D_WINDOWS -D_MBCS -D_REENTRANT -D_EXPERIMENTAL';
+    $config{DEFINE}     = '-D_WINDOWS -D_MBCS -D_REENTRANT -D_EXPERIMENTAL' .
+                          (check_ver() ? ' -D_USE_UTF8' : '');
     $config{CCFLAGS}    = '/W1 /GR /GX /Ob2 '.$Config{ccflags};
 
     eval qq[
@@ -108,10 +110,22 @@ DEATH
 -lc -L$ENV{XALANCROOT}/lib -lxalan-c1_3  -L/usr/lib
 -L/usr/local/lib
 LIBS
-    $config{DEFINE}     = '-DLINUX -D_REENTRANT -DNDEBUG -D_EXPERIMENTAL';
+    $config{DEFINE}     = '-DLINUX -D_REENTRANT -DNDEBUG -D_EXPERIMENTAL' .
+                          (check_ver() ? ' -D_USE_UTF8' : '') . 
+                          ($ENV{DEBUG_XALAN} ? ' -DDEBUG_XALAN' : '');
     $config{CC}         = 'c++';
     $config{LD}         = 'g++';
-    $config{CCFLAGS}    = '-instances=static',
+    $config{CCFLAGS}    = '-instances=static';
+
+    eval q[
+sub MY::const_loadlibs {
+    package MY;
+    my $str = shift->SUPER::const_loadlibs(@_);
+    print "Modifying LD_RUN_PATH...\n"
+        if $str =~ s#^(LD_RUN_PATH.+)$#$1:$ENV{XERCESCROOT}/lib#m;
+    return $str;
+}
+];
 
 } else {
     die <<"MSG";
@@ -125,7 +139,7 @@ WriteMakefile(
     'ABSTRACT'  => 'Perl interface to Xalan C++',
     'VERSION_FROM' => 'Xalan.pm', # finds $VERSION
     'OBJECT'    => '$(O_FILES)',
-     'clean'    => {FILES => "Xalan.cpp samples/docs/*.out"},
+     'clean'    => {FILES => "*~ t/*~ Xalan/*~ Driver/*~ Xalan.cpp samples/docs/*.out"},
     %config,
 );
 
@@ -148,6 +162,21 @@ sub MY::xs_c {
 .xs.cpp:
 	$(PERL) -I$(PERL_ARCHLIB) -I$(PERL_LIB) $(XSUBPP) $(XSPROTOARG) $(XSUBPPARGS) $*.xs >xstmp.c && $(MV) xstmp.c $*.cpp
     '
+}
+
+# a hack to fix bogus Makefile generated by MakeMaker
+sub MY::constants {
+    package MY;
+    my $str = shift->SUPER::constants(@_);
+    print "Got bogus link command. Fixing...\n" 
+        if $str =~ s#^(\s+Xalan\.o\w*?\s*?\\\s*\n){2,}#$1#mi;
+    return $str;
+}
+
+# detect Perl version to decide using utf-8 support or not
+sub check_ver {
+    $Config{version} =~ /^(\d+)\.(\d+)(?:\.(\d+))?/;
+    $1 >= 5 and $2 >= 6 and $3 >= 1 and return 1;
 }
 
 __END__
